--- a/src/styles.scss
+++ b/src/styles.scss
@@ -329,7 +329,7 @@ a {
 
   &__header {
     background: #180F2E;
-    height: 72px;
+    max-height: 72px;
     display: flex;
     align-items: center;
     justify-content: space-between;
